--- a/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.scss
@@ -3,10 +3,10 @@
 	mat-row, mat-header-row {
 		width: 130%;
 	}
-	// .mat-column-fullName {
-    //     flex: 0 0 15% !important;
-    //     padding-left: 10px !important;
-	// }
+	.mat-column-fullName {
+        // flex: 0 0 15% !important;
+        padding-left: 10px !important;
+	}
 	// .mat-column-pan {
 	// 	flex: 0 0 12% !important;
 	// }
