--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/approval/approval.component.html
@@ -177,7 +177,7 @@
                 <mat-form-field class="w-100">
 
                     <textarea cols="4" rows="3" matInput formControlName="commentByAppraiser"
-                        placeholder="Reason for Pending"></textarea>
+                        placeholder="Reason By Appraiser"></textarea>
                     <mat-error>Field
                         Required</mat-error>
                 </mat-form-field>
@@ -189,7 +189,7 @@
                 <mat-form-field class="w-100">
 
                     <textarea cols="4" rows="3" matInput formControlName="commentByBM"
-                        placeholder="Reason for Rejection"></textarea>
+                        placeholder="Reason By Branch Manager"></textarea>
                     <mat-error>Field Required
                     </mat-error>
                 </mat-form-field>
