--- a/gold-admin-frontend/src/app/views/partials/components/multi-select-search/multi-select-search.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/multi-select-search/multi-select-search.component.scss
@@ -9,4 +9,8 @@
         left: 5px !important;
         top: 1px !important;
     }
+    ::ng-deep.ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-placeholder{
+        top: unset !important;
+        padding-bottom: 0 !important;
+    }
 }
