--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -47,7 +47,7 @@
                 </mat-button-toggle-group>
             </span>
         </div>
-        <div class="col-2 text-right">
+        <div class="col-2 justify-content-end d-inline-flex p-0">
             <div *ngxPermissionsOnly="permissionType; then thenBlock"></div>
             <kt-filter *ngIf="showfilter" (filterApplyEvent)="applyFilter($event)" [filterName]="filterName"
                 [listType]="listType" [filterWidth]="filterWidth"></kt-filter>
@@ -61,7 +61,7 @@
 </ng-template> -->
 <ng-template #thenBlock>
     <kt-button *ngIf="rightButton" [value]='value2' [type]='type2' (click)="action($event)"
-        (action)="buttonValue($event)"></kt-button>
+        (action)="buttonValue($event)" class="kt-padding-r-5"></kt-button>
 </ng-template>
 <ng-template #elseBlock>
     <kt-button *ngIf="value1" [value]='value1' [type]='type1' (click)="action($event)" (action)="buttonValue($event)"
