bhushAN: global settings

--- a/gold-admin-frontend/src/app/views/pages/settings/global-settings/global-settings.component.html
+++ b/gold-admin-frontend/src/app/views/pages/settings/global-settings/global-settings.component.html
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <kt-button [value]="'Save'" [type]="'submit'" (action)="submit()"></kt-button>
+                    <kt-button [value]="'Save'" [type]="'submit'" (action)="submit('ltvGoldPercent')"></kt-button>
                 </div>
             </div>
 
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <kt-button [value]="'Save'" [type]="'submit'" (action)="submit()"></kt-button>
+                    <kt-button [value]="'Save'" [type]="'submit'" (action)="submit('minimumLoanAmount')"></kt-button>
                 </div>
             </div>
 
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <kt-button [value]="'Save'" [type]="'submit'" (action)="submit()"></kt-button>
+                    <kt-button [value]="'Save'" [type]="'submit'" (action)="submit('minimumTopUpAmount')"></kt-button>
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <kt-button [value]="'Save'" [type]="'submit'" (action)="submit()"></kt-button>
+                    <kt-button [value]="'Save'" [type]="'submit'" (action)="submit('gracePeriod')"></kt-button>
                 </div>
             </div>
 
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <kt-button [value]="'Save'" [type]="'submit'" (action)="submit()"></kt-button>
+                    <kt-button [value]="'Save'" [type]="'submit'" (action)="submit('gst')"></kt-button>
                 </div>
             </div>
         </div>
